--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,9 @@ after_success:
 - true
 before_deploy:
 - openssl aes-256-cbc -K $encrypted_b604608d644e_key -iv $encrypted_b604608d644e_iv -in .travis/deploy.zip.enc -out .travis/deploy.zip -d
+- unzip .travis/deploy.zip -d .travis
+- mv .travis/.gritty_travis ~/.ssh/.gritty_travis
+- mv .travis/.conan_the_deployer ~/.ssh/.conan_the_deployer
 - eval "$(ssh-agent -s)"
 - chmod 600 ~/.ssh/.gritty_travis
 - chmod 600 ~/.ssh/.conan_the_deployer
