--- a/.gitignore
+++ b/.gitignore
@@ -53,7 +53,7 @@ coverage.xml
 
 # Django stuff:
 *.log
-local_settings.py
+#local_settings.py
 
 # Flask stuff:
 instance/
@@ -110,7 +110,7 @@ metastore_db
 metastore_db/
 
 # settings
-combine/localsettings.py
+#combine/localsettings.py
 
 # Mac OS
 .DS_Store
